# ghoti.rs

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
benches/: correction.rs
src/: ghoti.rs  lib.rs  main.rs
tests/: correction.rs  test_ghoti.rs
