[package]
name = "ghoti"
version = "0.1.0"
authors = ["Kevin Yap <me@kevinyap.ca>"]
description = "Toy spell checker written in Rust."
keywords = ["spelling", "spell-checker", "ghoti"]
homepage = "https://github.com/iKevinY/ghoti.rs"
repository = "https://github.com/iKevinY/ghoti.rs"
readme = "README.md"
license = "MIT"

[[bin]]
name = "ghoti"
path = "src/main.rs"
test = false
doc = false

[lib]
path = "src/lib.rs"

[dependencies]
getopts = "0.2"
lazy_static = "0.2"
regex = "0.2"
